// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> should render PacMan correctly 1`] = `
<Progress
  currentSlideIndex={2}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="pacman"
>
  <Styled(div)
    styles={
      Array [
        undefined,
        null,
      ]
    }
  >
    <div
      className="css-0 e12weced4"
    >
      <div>
        <Styled(div)
          position={
            Object {
              "left": "15px",
              "top": "-20px",
            }
          }
          styles={undefined}
        >
          <div
            className="css-tyaqbb e12weced0"
          >
            <Styled(div)
              styles={
                Array [
                  undefined,
                  Object {
                    "animation": "animation-vwhb3c 0.12s linear 10 alternate both",
                  },
                  null,
                ]
              }
            >
              <div
                className="css-1la23zo e12weced1"
              />
            </Styled(div)>
            <Styled(div)
              styles={
                Array [
                  undefined,
                  Object {
                    "animation": "animation-1p18wsg 0.12s linear 10 alternate both",
                  },
                  null,
                ]
              }
            >
              <div
                className="css-1yi33k2 e12weced1"
              />
            </Styled(div)>
          </div>
        </Styled(div)>
        <Styled(div)
          key="presentation-progress-0"
          position={
            Object {
              "left": "-25px",
              "opacity": 0,
              "top": "-20px",
            }
          }
          styles={
            Array [
              undefined,
              null,
            ]
          }
        >
          <div
            className="css-1xucvt e12weced2"
          />
        </Styled(div)>
        <Styled(div)
          key="presentation-progress-1"
          position={
            Object {
              "left": "-5px",
              "opacity": 0,
              "top": "-20px",
            }
          }
          styles={
            Array [
              undefined,
              null,
            ]
          }
        >
          <div
            className="css-ci3gz3 e12weced2"
          />
        </Styled(div)>
        <Styled(div)
          key="presentation-progress-2"
          position={
            Object {
              "left": "15px",
              "opacity": 0,
              "top": "-20px",
            }
          }
          styles={
            Array [
              undefined,
              null,
            ]
          }
        >
          <div
            className="css-41ffu3 e12weced2"
          />
        </Styled(div)>
      </div>
    </div>
  </Styled(div)>
</Progress>
`;

exports[`<Progress /> should render nothing when none is provided. 1`] = `
<Progress
  currentSlideIndex={3}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="none"
/>
`;

exports[`<Progress /> should render the bar style correctly 1`] = `
<Progress
  currentSlideIndex={1}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="bar"
>
  <Styled(div)
    styles={
      Array [
        undefined,
        null,
      ]
    }
  >
    <div
      className="css-0 e12weced4"
    >
      <Styled(div)
        styles={
          Array [
            undefined,
            null,
          ]
        }
        width={
          Object {
            "width": "50%",
          }
        }
      >
        <div
          className="css-11ze7cv e12weced3"
          width={
            Object {
              "width": "50%",
            }
          }
        />
      </Styled(div)>
    </div>
  </Styled(div)>
</Progress>
`;

exports[`<Progress /> should render the number style correctly 1`] = `
<Progress
  currentSlideIndex={1}
  items={
    Array [
      Object {
        "id": 0,
      },
      Object {
        "id": 1,
      },
      Object {
        "id": "last",
      },
    ]
  }
  type="number"
>
  <Styled(div)
    styles={
      Array [
        undefined,
        null,
      ]
    }
  >
    <div
      className="css-0 e12weced4"
    >
      <div>
        2
         / 
        3
      </div>
    </div>
  </Styled(div)>
</Progress>
`;
